# openapi/openapi.yaml
@@ -85,6 +85,86 @@ paths:
                 $ref: '#/components/schemas/Task'
         '404':
           description: Task not found
+  /users:
+    get:
+      summary: Get all users
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    post:
+      summary: Create new user
+      tags:
+        - users
+      requestBody:
+        description: The user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: The created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /users/{id}:
+    delete:
+      summary: Delete user by ID
+      tags:
+        - users
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: The ID of the user to delete
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '204':
+          description: User successfully deleted
+        '404':
+          description: User not found
+        '500':
+          description: Internal server error
+    patch:
+      summary: Update existing user by ID
+      tags:
+        - users
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: The ID of the user to update
+          schema:
+            type: integer
+            format: uint
+      requestBody:
+        description: The updated user
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: Successfully update
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '404':
+          description: User not found
 components:
   schemas:
     Task:
@@ -97,4 +177,13 @@ components:
           type: string
         is_done:
           type: boolean
-
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+        password:
+          type: string
